added /dashboard view

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,8 @@
 ---
-import Welcome from "../components/Welcome.astro";
+import DashboardView from "../components/dashboard/DashboardView";
 import Layout from "../layouts/Layout.astro";
 ---
 
-<Layout>
-  <Welcome />
+<Layout title="My Plans - VibeTravel">
+  <DashboardView client:load />
 </Layout>
