--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -9,6 +9,7 @@ interface Props {
 
 const { title = "VibeTravel" } = Astro.props;
 
+//TODO: import meta glob
 const images = await Astro.glob<{ default: ImageMetadata }>("../../public/assets/backgrounds/*.webp");
 const imagePaths = images.map((image) => image.default.src);
 ---
