--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -23,6 +23,7 @@ const imagePaths = Object.values(imageModules).map((image) => image.default.src)
     <link rel="icon" type="image/png" href="/favicon.png" />
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
+    {imagePaths.map((src) => <link rel="preload" as="image" href={src} />)}
   </head>
   <body>
     <SlideshowBackground images={imagePaths} client:load />
