--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,12 +2,14 @@
 import "../styles/global.css";
 import SlideshowBackground from "../components/layout/SlideshowBackground.tsx";
 import type { ImageMetadata } from "astro";
+import TopBar from "../components/layout/TopBar.tsx";
 
 interface Props {
   title?: string;
 }
 
 const { title = "VibeTravel" } = Astro.props;
+const user = Astro.locals.user;
 
 const imageModules = import.meta.glob<{ default: ImageMetadata }>("../../public/assets/backgrounds/*.webp", {
   eager: true,
@@ -26,6 +28,7 @@ const imagePaths = Object.values(imageModules).map((image) => image.default.src)
     {imagePaths.map((src) => <link rel="preload" as="image" href={src} />)}
   </head>
   <body>
+    {user && <TopBar client:load />}
     <SlideshowBackground images={imagePaths} client:load />
     <slot />
   </body>
