--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,5 @@
 ---
-import DashboardView from "../components/dashboard/DashboardView";
 import Layout from "../layouts/Layout.astro";
 ---
 
-<Layout title="My Plans - VibeTravel">
-  <DashboardView client:load />
-</Layout>
+<Layout title="" />
