--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,8 @@
 ---
 import Layout from "../layouts/Layout.astro";
+import LandingPage from "../components/landing/LandingPage";
 ---
 
-<Layout title="" />
+<Layout title="VibeTravel - Your AI-Powered Trip Planner">
+  <LandingPage client:load />
+</Layout>
